Mon Dec 15 22:45:23 2003  Tim Janik  <timj@gtk.org>

	* sfiparams.h: document :skip-default: and :skip-undo: property options.

Mon Dec 15 15:30:57 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: auto-prepend "/Modules/" to plugin categories, as
	this part of the category string should not be translated, and
	is redundant in idl files.

Sat Dec 13 19:09:47 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.*: Support parsing for i18n'd strings in property
	groups, stream and info declarations.

	* sfidl-generator.* sfidl-module.*: Write out i18n'd strings when
	required by the IDL file.

	* testidl.idl: The syntax 'property "X-Group" Real y;' for groups is
	no longer supported.

Wed Dec 10 09:20:33 2003  Tim Janik  <timj@gtk.org>

	* sfinote.c: support parsing upper and lower case notes.
	for string conversions, switched to uppercase note names.

Mon Dec  8 16:38:32 2003  Tim Janik  <timj@gtk.org>

	* sfinote.c (sfi_note_from_string_err): error handling fixup.

Sat Dec  6 02:36:49 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.[hc]: added (moved from sfi)
	g_param_spec_set_options(), g_param_spec_check_option(),
	g_param_spec_add_option(), g_param_spec_provides_options(),
	g_param_spec_get_options(), g_param_spec_set_istepping(),
	g_param_spec_get_istepping(), g_param_spec_set_fstepping(),
	g_param_spec_get_fstepping(), g_param_spec_set_log_scale()
	and g_param_spec_get_log_scale() to support user defined
	options, and to handle stepping and logarithmic scaling
	generically for the various integer and floarting types.

	* sfiparams.[hc]: removed paramspec functions which glib-extra.h
	provides now. added sfi_pspec_get_choice_hash() as an approximative
	substitute for SfiChoice type signatures.

Fri Dec  5 00:35:24 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.c: handle NULL for intern_string variants.

	* sfiprimitives.[hc]: added sfi_ring_append_uniq().

Tue Dec  2 23:32:12 2003  Tim Janik  <timj@gtk.org>
